--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -2,13 +2,11 @@ body {
     font-family: 'Lato', sans-serif;
     color: #747704;
     font-weight: 300;
-}
-.row {
-    background-color: #eaeaea;
+    background-color: #a1a1a1;
 }
 
 .text-muted {
-    color: #BCBBBB;
+    color: black;
 }
 
 .text-thin {
@@ -28,6 +26,23 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.project-link {
+    color: black;
+}
+
+h1 {
+    color: black;
+}
+
+h2 {
+    color: black;
+}
+
+h3 {
+    color: black;
+}
+
 @media only screen and (max-width: 500px) {
     h1 {
     text-align: center;
