--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -2,7 +2,19 @@ body {
     font-family: 'Lato', sans-serif;
     color: #747704;
     font-weight: 300;
-    background-color: #a1a1a1;
+    background-color: #2098d1;
+}
+
+.navbar-default .navbar-nav li a {
+    color: #fff;
+}
+
+/* .navbar-left {
+    float: right!important;
+    }*/
+
+.container-fluid {
+    background-color: #2098d1;
 }
 
 .text-muted {
@@ -25,6 +37,14 @@ body {
 .new-zealand {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 35px;
+}
+
+.navbar-nav {
+    float: left;
+    margin: 0;
+    /*Below is how I've centered the menu. How can I do this so it's more responsive friendly?*/
+    margin-left: 600px;
 }
 
 .project-link {
@@ -32,28 +52,28 @@ body {
 }
 
 h1 {
-    color: black;
+    color: white;
 }
 
 h2 {
-    color: black;
+    color: white;
 }
 
 h3 {
-    color: black;
+    color: white;
 }
 
 @media only screen and (max-width: 500px) {
     h1 {
+        text-align: center;
+    }
+
+@    media only screen and (max-width: 500px) {
+        h2 {
     text-align: center;
     }
 
-@media only screen and (max-width: 500px) {
-    h2 {
-    text-align: center;
-    }
-
-@media only screen and (max-width: 500px) {
-    h3 {
+@    media only screen and (max-width: 500px) {
+        h3 {
     text-align: center;
     }
