style: hide logo on mobile and added contact menu item

--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -70,6 +70,11 @@ h3 {
     }
 
 @media only screen and (max-width: 500px) {
+    .title-logo {
+        display: none;
+    }
+
+@media only screen and (max-width: 500px) {
         h2 {
     text-align: center;
     }
